# Zonik

./: .gitignore  CLAUDE.md  PLAN.md  README.md  TODO.md  alembic.ini  create-ct.sh  install.sh  pyproject.toml  upgrade.sh  zonik.toml.example
backend/: config.py  database.py  main.py
backend/api/: analysis.py  config_api.py  discovery.py  download.py  favorites.py  jobs.py  library.py  map.py  playlists.py  recommendations.py  schedule.py  tracks.py  upgrades.py  users.py  websocket.py
backend/migrations/: env.py
backend/models/: __init__.py  album.py  analysis.py  artist.py  blacklist.py  bookmark.py  embedding.py  favorite.py  job.py  play_history.py  play_queue.py  playlist.py  recommendation.py  schedule.py  stats.py  taste_profile.py  track.py  upgrade.py  user.py
backend/services/: analyzer.py  artwork.py  claude_ai.py  cleanup.py  embeddings.py  enrichment.py  graph_builder.py  lastfm.py  lidarr.py  recommender.py  remix_discovery.py  scanner.py  scrobbler.py  similarity.py  soulseek.py  tagger.py
backend/soulseek/: __init__.py  client.py  listener.py  peer.py  reputation.py  search.py  server_conn.py  shares.py  (+1 more)
deploy/: zonik-web.service  zonik-worker.service
docs/: api.md  configuration.md  development.md  installation.md
frontend/: package-lock.json  package.json  tailwind.config.js  vite.config.js
plans/: ai-music-assistant.md  christmas-playlist.md  duplicate-management-redesign.md  multi-library.md  music-map-enhancements.md  music-map.md  phase2-recommendations-and-analysis.md  play-stats.md  remix-discovery.md  user-ratings.md
(+69 files in other folders)
