[project]
name = "zonik"
version = "0.1.0"
description = "Self-hosted music backend with OpenSubsonic API"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "sqlalchemy[asyncio]>=2.0.30",
    "aiosqlite>=0.20.0",
    "alembic>=1.13.0",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.3.0",
    "mutagen>=1.47.0",
    "httpx>=0.27.0",
    "arq>=0.26.0",
    "redis>=5.0.0",
    "bcrypt>=4.1.0",
    "python-multipart>=0.0.9",
    "tomli>=2.0.0;python_version<'3.11'",
    "aiofiles>=24.1.0",
    "Pillow>=10.3.0",
    "websockets>=12.0",
]

[project.optional-dependencies]
analysis = [
    "essentia>=2.1b6.dev1",
    "numpy>=1.26.0",
]
clap = [
    "transformers>=4.40.0",
    "torch>=2.0.0",
]
kimahub = [
    "asyncpg>=0.29.0",
]
all = [
    "zonik[analysis,clap,kimahub]",
]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["backend*"]
